# RetailMind

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  compose.yaml  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/src/retailmind_api/: __init__.py  agents.py  ai.py  catalog.py  config.py  events.py  main.py  memory.py  migrations.py  models.py  recommendations.py
apps/api/src/retailmind_api/data/: catalog.json  customers.json
apps/api/tests/: conftest.py  test_ai.py  test_catalog.py  test_events.py  test_health.py  test_memory.py  test_migrations.py  test_recommendations.py
apps/web/: Dockerfile  eslint.config.mjs  package.json  tsconfig.tsbuildinfo  vitest.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/delivery-delay/: route.ts
apps/web/src/app/api/demo-reset/: route.ts
apps/web/src/app/api/events/: route.ts
apps/web/src/app/api/recommendations/: route.ts
apps/web/src/components/: agent-operations.tsx  agent-trace.test.tsx  agent-trace.tsx  recommendation-card.tsx  recommendation-comparison.test.tsx  recommendation-comparison.tsx  return-dialog.tsx  shopping-experience.tsx
apps/web/src/lib/: api-proxy.test.ts  api-proxy.ts  retailmind-types.ts
docs/: architecture.md  coding-standards.md  database-migrations.md  demo-script.md  lyzr-setup.md  operations.md  roadmap.md  testing.md
scripts/: migrate-memory.py  test-api.sh
