[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "retailmind-api"
version = "0.1.0"
description = "RetailMind orchestration API"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "pydantic-settings>=2.10,<3",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9",
  "pytest-cov>=6,<8",
  "ruff>=0.12,<1",
]
agents = [
  "qdrant-client>=1.15,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/retailmind_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--strict-markers --strict-config"

[tool.coverage.run]
branch = true
source = ["retailmind_api"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
